--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.7.9",
     "openai": "^4.83.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "react-scripts": "5.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.29.0",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.5"
   },
   "scripts": {
